- fixed background clipping - fixed sidebar clipping - added sidebar animation - improved sodebar design

--- a/styles/general/general.css
+++ b/styles/general/general.css
@@ -1,10 +1,14 @@
 body {
   background-image: url("../../Design2.jpg");
-  background-position: center;
+  background-position: bottom center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   background-color: darkgrey;
   font-family: 'Protest Revolution', sans-serif;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 .input,
