--- a/styles/sidebar/sidebar.css
+++ b/styles/sidebar/sidebar.css
@@ -2,7 +2,7 @@
   display: block;
   position: absolute;
   bottom: 0;
-  right: 0;
+  right: -244px;
   background-color: rgba(255, 255, 255, 0.7);
   color: antiquewhite;
   text-align: center;
@@ -10,9 +10,16 @@
   border-radius: 10px;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
-  font-size: clamp(10px, 5vh, 50px);
-  min-height: 75px;
+  font-size: 25px;
   width: 300px;
+  height: 150px;
+  overflow-x: hidden;
+  transition: transform 0.5s ease;
+
+}
+
+.sidebar:hover {
+  transform: translateX(-244px)
 }
 
 .arrow{
@@ -24,8 +31,9 @@
   left: 0px;
   bottom: 0px;
   margin: 0;
-  padding: 0 20px 0 15px;
-  background-color: black;
+  padding: 0 20px 0 15px; 
+  background-color:rgb(255, 136, 0);
+  color: white;
   height: 100%;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -37,10 +45,16 @@
   color: black;
   text-decoration: none;
   margin-left: 50px;
+  margin-top: 38px;
 }
 
 .github-link {
   color: black;
-  text-decoration: none;
+  text-decoration: underline;
   margin-top:15px;
+}
+
+.github-link:hover {
+  color: #f0f0f0;
+  font-style: italic;
 }
